Fixed section alignment

--- a/highSchool/3/JezykiProgramowania/04.10.2024/styl.css
+++ b/highSchool/3/JezykiProgramowania/04.10.2024/styl.css
@@ -36,6 +36,7 @@ body {
 
 #content > section {
     display: inline-block;
+    vertical-align: top;
     width: 33%;
     height: 350px;
 }
